# PersonalAIAgents

./: .gitignore  README.md  hello_world_agentic.py  main.py  pyproject.toml  weather_hello_agent.py
DEMO/: DEMO_notebook_run_model_on_hyperbolic.ipynb
DEMO/langchain/: DEMO_langchain.py  DEMO_notebook_langchain.ipynb
DEMO/tools/: DEMO_notebook_tools_with_api_calls_1.ipynb  DEMO_notebook_tools_with_api_calls_2.ipynb
financial_charting_ai/: README.md  __init__.py  data_loader_protocol.py  fred_loader.py  main_fred.py
misc/: DEMO_run_model_on_hyperbolic.ipynb
telegram_summarizer/: loader_playground.ipynb  my_session.session  test_loader.py  test_session.session  test_session.session-journal  test_session_new.session
telegram_summarizer/utils/: dialog_info.py  telegram_dialog_lister.py
