[project]
name = "personalaiagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "openai-agents>=0.2.3",
    "python-dotenv>=1.1.1",
    "telethon>=1.40.0",
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
]
